WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314251
Dynamically inserting `<img>` elements with `src` attribute is slow
https://bugs.webkit.org/show_bug.cgi?id=314251
Summary
Dynamically inserting `<img>` elements with `src` attribute is slow
Nipun Shukla
Reported
2026-05-06 15:48:26 PDT
rdar://166201075
Attachments
Add attachment
proposed patch, testcase, etc.
Nipun Shukla
Comment 1
2026-05-06 15:50:01 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64408
EWS
Comment 2
2026-05-14 15:39:52 PDT
Committed
313268@main
(42a531abe636): <
https://commits.webkit.org/313268@main
> Reviewed commits have been landed. Closing PR #64408 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug