Source/WebCore/contentextensions/DFABytecodeInterpreter.h
@@ -36,11 +36,24 @@
 namespace WebCore::ContentExtensions {
 
 class DFABytecodeInterpreter {
+    WTF_MAKE_TZONE_ALLOCATED_EXPORT(DFABytecodeInterpreter, WEBCORE_EXPORT);
 public:
-    DFABytecodeInterpreter(std::span<const uint8_t> bytecode)
-        : m_bytecode(bytecode) { }
+    enum class EnableResumeCache : bool { No, Yes };
+    WEBCORE_EXPORT DFABytecodeInterpreter(std::span<const uint8_t> bytecode, EnableResumeCache = EnableResumeCache::No);
 
     using Actions = HashSet<uint64_t, DefaultHash<uint64_t>, WTF::UnsignedWithZeroKeyHashTraits<uint64_t>>;
+
+    struct DFACheckpoint {
+        static constexpr uint32_t terminatedBeforeCheckpoint = std::numeric_limits<uint32_t>::max();
+        uint32_t programCounter { 0 };
+        Actions actions;
+    };
+    struct ResumeSlot {
+        String url;
+        ResourceFlags flags { 0 };
+        Vector<DFACheckpoint> perDFA;
+    };
+    using ResumeSlots = Vector<ResumeSlot, 4>;
 
     WEBCORE_EXPORT Actions interpret(const String&, ResourceFlags);
     WEBCORE_EXPORT Actions actionsMatchingEverything();
@@ -53,6 +66,7 @@ private:
     void NODELETE interpretJumpTable(std::span<const Latin1Character> url, uint32_t& urlIndex, uint32_t& programCounter);
 
     const std::span<const uint8_t> m_bytecode;
+    std::unique_ptr<ResumeSlots> m_resumeCache;
 };
 
 } // namespace WebCore::ContentExtensions
